avformat/format: Weight the filename extension higher if there is nearly no data after an ID3 available

Fixes Ticket5205

Based-on-patch-by: Carl Eugen Hoyos
Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>